[gd_scene load_steps=8 format=3 uid="uid://c2jt22j1dklxq"]

[ext_resource type="Script" uid="uid://dxf1yijg5rs2n" path="res://explosió.gd" id="1_xg6um"]
[ext_resource type="Texture2D" uid="uid://12p04mnb1ybf" path="res://6615308.jpg" id="2_xg6um"]
[ext_resource type="Texture2D" uid="uid://csoslhyoxhg01" path="res://image-removebg-preview (1).png" id="3_sq4h3"]
[ext_resource type="AudioStream" uid="uid://bij8a0k4tpqhu" path="res://campfire-crackling-335493.mp3" id="4_akt3q"]

[sub_resource type="Curve" id="Curve_vi7p2"]
_data = [Vector2(0.0625, 1), 0.0, 0.0, 0, 0, Vector2(0.977273, 0.404494), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_0stuq"]
offsets = PackedFloat32Array(0, 0.3, 0.6, 0.68, 0.9)
colors = PackedColorArray(1, 0.235294, 0.133333, 1, 1, 0.372549, 0, 1, 1, 0.752941, 0.266667, 0.890196, 1, 0.952941, 0.266667, 0.376471, 1, 0.952941, 0, 0)

[sub_resource type="Curve" id="Curve_akt3q"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.977273, 0.168539), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Main" type="Node2D"]
script = ExtResource("1_xg6um")

[node name="Casa" type="Node2D" parent="."]

[node name="Normal" type="Sprite2D" parent="Casa"]
visible = false
position = Vector2(5, 0)
scale = Vector2(0.0399167, 0.0399167)
texture = ExtResource("2_xg6um")

[node name="Incendiada" type="Sprite2D" parent="Casa"]
position = Vector2(-2, -10)
scale = Vector2(0.28871, 0.28871)
texture = ExtResource("3_sq4h3")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="Foc" type="Node2D" parent="."]

[node name="Foc" type="CPUParticles2D" parent="Foc"]
position = Vector2(-12, 34)
amount = 2000
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 10.25
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_vi7p2")
color_ramp = SubResource("Gradient_0stuq")

[node name="Foc2" type="CPUParticles2D" parent="Foc"]
position = Vector2(52, 26)
amount = 2000
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 10.25
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_vi7p2")
color_ramp = SubResource("Gradient_0stuq")

[node name="Foc3" type="CPUParticles2D" parent="Foc"]
position = Vector2(7, -28)
amount = 2000
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 10.25
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_vi7p2")
color_ramp = SubResource("Gradient_0stuq")

[node name="Foc4" type="CPUParticles2D" parent="Foc"]
position = Vector2(-36, -1)
amount = 2000
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 10.25
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_vi7p2")
color_ramp = SubResource("Gradient_0stuq")

[node name="Foc5" type="CPUParticles2D" parent="Foc"]
position = Vector2(-57, 30)
amount = 2000
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 10.25
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_vi7p2")
color_ramp = SubResource("Gradient_0stuq")

[node name="Foc6" type="CPUParticles2D" parent="Foc"]
position = Vector2(1, 24)
amount = 2000
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 10.25
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_vi7p2")
color_ramp = SubResource("Gradient_0stuq")

[node name="Explosio" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Explosio"]
emitting = false
amount = 150
lifetime = 1.09
one_shot = true
explosiveness = 0.79
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_akt3q")

[node name="Label" type="Label" parent="."]
offset_left = -44.0
offset_top = 46.0
offset_right = 204.0
offset_bottom = 69.0
scale = Vector2(0.36, 0.36)
text = "PREM ENTER PER L'EXPERIÈNCIA"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-44, 46)
scale = Vector2(0.36, 0.36)
stream = ExtResource("4_akt3q")
